# grokharness

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  docker-compose.yml  ghar.conf  prompt.txt
benchmarks/: README.md  run_hallucination_suite.sh  run_openmmlab_scan.sh  run_perf_uplift.sh  run_py_torch_suite.sh  run_real_model_eval.sh
benchmarks/hallucinations/: cases.tsv
benchmarks/openmmlab/: OPENMMLAB_SCAN.md  README.md  README_OPENMMLAB_SNIPPET.md  openmmlab_findings.tsv  openmmlab_summary.tsv  repos.tsv
benchmarks/real_model/fixtures/: RM01.json  RM04.json  RM05.json  RM06.json  RM07.json  RM08.json
benchmarks/workloads/: matmul_opt.cpp  saxpy_cuda.cu
dont_read_me_src/: assert_check.cpp  assert_check.hpp  bench_check.cpp  bench_check.hpp  compile_check.cpp  compile_check.hpp  config.cpp  config.hpp  cuda_check.cpp  cuda_check.hpp  doctor.cpp  doctor.hpp  gate.cpp  gate.hpp  import_check.cpp  import_check.hpp  main.cpp  output.cpp  output.hpp  python_check.cpp  python_check.hpp  run_check.cpp  run_check.hpp  store.cpp  store.hpp  symbols_check.cpp  symbols_check.hpp  test_check.cpp  test_check.hpp  tsv.cpp  tsv.hpp  util.cpp  util.hpp  verify.cpp  verify.hpp  work.cpp  work.hpp
dont_read_me_src/benchmarks/: README.md  run_hallucination_suite.sh  run_openmmlab_scan.sh  run_perf_uplift.sh  run_py_torch_suite.sh  run_real_model_eval.sh
dont_read_me_src/benchmarks/openmmlab/: openmmlab_findings.tsv
dont_read_me_src/benchmarks/real_model/: eval_driver.py  tasks.json
dont_read_me_src/benchmarks/real_model/fixtures/: RM02.json  RM03.json
dont_read_me_src/benchmarks/workloads/: matmul_naive.cpp
dont_read_me_src/scripts/: autonomous_loop.sh  run_uplift_report.sh
dont_read_me_src/testdata/: add.cu  hello.cpp
dont_read_me_src/testdata/python/: exec_error.py  syntax_bad.py
dont_read_me_src/tests/: common.sh  run_all.sh  test_cuda.sh  test_hallucination_suite.sh  test_python_torch.sh  test_ui_data.sh  test_ui_http.sh  test_verify.sh
dont_read_me_src/ui/: README.md  data.py
dont_read_me_src/ui/sample_results/: code_findings.tsv  hallucination_summary.tsv  py_torch_cases.tsv  py_torch_summary.tsv  real_model_cases.tsv  real_model_summary.tsv
if_necessary_you_can_read_me/: ARCHITECTURE.md  AUTONOMOUS.md  BEST_PRACTICES.md  BUGS_FIXED.md  GROK_BUILD_AUTONOMY.md  UPLIFT_REPORT.md  hallucination_cases.tsv  hallucination_summary.tsv  perf_uplift.tsv
if_necessary_you_can_read_me/integrations/: AGENTS.md
if_necessary_you_can_read_me/integrations/claude/: settings.fragment.json
integrations/: AGENTS.md
integrations/aider/: README.md
integrations/claude/: ghar-stop.sh
oracles/: py_torch_validate.py  repo_scan.py
read_me_if_it_is_not_installed/: FOR_AGENT.md  FOR_HUMAN.md  install.sh
scripts/: autonomous_loop.sh  run_uplift_report.sh
testdata/python/: import_missing.py  ok_hello.py
testdata/torch/: bad_forward.py  hallucinated_alias_F.py  hallucinated_attr.py  hallucinated_functional.py  matmul_naive.py  matmul_opt.py  ok_alias_F.py  ok_linear.py  uplift_driver.py
tests/: common.sh  run_all.sh  test_bugs.sh  test_cli_smoke.sh  test_compile_run.sh  test_cuda.sh  test_feedback_stderr.sh  test_hallucination_suite.sh  test_import_assert_gate.sh  test_python_torch.sh  test_ui_data.sh  test_ui_http.sh  test_verify.sh  test_work.sh
ui/: Dockerfile  README.md  app.py  data.py
ui/sample_results/: hallucination_cases.tsv
